--- a/React/react-practice-using-next.js/src/app/globals.css
+++ b/React/react-practice-using-next.js/src/app/globals.css
@@ -24,3 +24,9 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.wholetext {
+  text-align: center;
+  margin: 0 auto;
+  padding: 400px;
+}
